--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
       <img src="image/PDF_file_icon.svg.png" alt="PDF Icon for Essay 1" class="pdf-icon">
     </a>
        <div class="image-row">
-         <img src="image/doll image.jpg" alt="Static representation for Essay 2" class="static-image">
-         <img src="image/hand.jpg" alt="Static representation for Essay 2" class="static-image">
+         <img src="image/1_bofg0Sx6B9ph4IKVzF9b4w.webp" alt="Static representation for Essay 3" class="static-image st-img">
+         <img src="image/1_bofg0Sx6B9ph4IKVzF9b4w.webp" alt="Static representation for Essay 3" class="static-image st-img">
       </div>
 
   </div>
